fix:overflow-x with @media

--- a/src/app/pages/feed/feed.component.scss
+++ b/src/app/pages/feed/feed.component.scss
@@ -13,14 +13,12 @@
     width: 100%;
     height: 100%;
     padding: 12px;
-    // gap: 16px;
     &_left {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       background: white;
       height: 100%;
-
       &-organizer {
         display: flex;
         flex-direction: column;
@@ -54,7 +52,9 @@
             &-filter {
               gap: 16px;
               display: flex;
-              overflow-x: scroll;
+              @media screen and (max-width: 768px) {
+                overflow-x: scroll;
+              }
             }
           }
         }
@@ -98,7 +98,9 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  overflow-x: scroll;
+  @media screen and (max-width: 768px) {
+    overflow-x: scroll;
+  }
 }
 
 .bot-icon {
